# transcription_service

./: .gitignore  README.md  env.tmpl  pyproject.toml  run_api.sh
transcription_service/: __init__.py  transcribe.py
